--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="logo">Creative<span>Studio</span></div>
         <div class="menu-toggle">
-            <div class="hamburger"></div>
+            <div class="hamburger"></div>                                                   
         </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
@@ -113,7 +113,7 @@
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>a>
                 </div>
             </div>
         </div>
