--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2>Our Work</h2>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="https://source.unsplash.com/600x400/?website" alt="Project 1">
+                <img src="https://www.pinterest.com/pin/118923246404646900/" alt="Project 1">
                 <div class="portfolio-overlay">
                     <h3>Project One</h3>
                     <p>Web Design</p>
