--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>Creative Landing Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
+
+    <!-- Update EmailJS SDK to the latest version -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("ksAgCbs0wFpklGWs4");
+        })();
+    </script>
+</head> 
 <body>
     <nav class="navbar">
         <div class="logo">Creative<span>Studio</span></div>
         <div class="menu-toggle">
-            <div class="hamburger"></div>                                                   
+            <div class="hamburger"></div>
         </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
@@ -35,21 +43,21 @@
     </section>
 
     <section id="services" class="services">
-        <h2>Our Services</h2>
+        <h2>My Services</h2>
         <div class="services-grid">
             <div class="service-card">
-                <i class="fas fa-paint-brush"></i>
+               <i class="fas fa-palette"></i>
                 <h3>Web Design</h3>
                 <p>Creative and responsive web designs that capture your brand's essence.</p>
             </div>
             <div class="service-card">
-                <i class="fas fa-code"></i>
-                <h3>Development</h3>
+                <i class="fas fa-film"></i>
+                <h3>Video Editing</h3>
                 <p>Clean and efficient code that brings your ideas to life.</p>
             </div>
             <div class="service-card">
-                <i class="fas fa-mobile-alt"></i>
-                <h3>Mobile First</h3>
+                <i class="fas fa-pencil"></i>
+                <h3>Graphic Design</h3>
                 <p>Optimized for all devices, ensuring a seamless experience.</p>
             </div>
         </div>
@@ -59,21 +67,21 @@
         <h2>Our Work</h2>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="https://www.pinterest.com/pin/118923246404646900/" alt="Project 1">
+                <img src="images/1.jpg" alt="Project 1">
                 <div class="portfolio-overlay">
                     <h3>Project One</h3>
                     <p>Web Design</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://source.unsplash.com/600x400/?tech" alt="Project 2">
+                <img src="images/2.jpg" alt="Project 2">
                 <div class="portfolio-overlay">
                     <h3>Project Two</h3>
                     <p>Development</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://source.unsplash.com/600x400/?mobile" alt="Project 3">
+                <img src="images/3.jpg" alt="Project 3">
                 <div class="portfolio-overlay">
                     <h3>Project Three</h3>
                     <p>Mobile App</p>
@@ -86,15 +94,15 @@
         <h2>Get in Touch</h2>
         <form id="contact-form" class="contact-form">
             <div class="form-group">
-                <input type="text" id="name" required>
+                <input type="text" id="name" name="name" required>
                 <label for="name">Name</label>
             </div>
             <div class="form-group">
-                <input type="email" id="email" required>
+                <input type="email" id="email" name="email" required>
                 <label for="email">Email</label>
             </div>
             <div class="form-group">
-                <textarea id="message" required></textarea>
+                <textarea id="message" name="message" required></textarea>
                 <label for="message">Message</label>
             </div>
             <button type="submit" class="submit-button">Send Message</button>
@@ -113,7 +121,7 @@
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
